# cloud-sdk

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
crates/cloud-sdk/: Cargo.toml
crates/cloud-sdk-azure-client/: Cargo.toml
crates/cloud-sdk-azure-client/src/: client.rs  config.rs  lib.rs  provider.rs
crates/cloud-sdk-azure-client/src/auth/: azure_cli.rs  chained.rs  client_secret.rs  mock_credential.rs  mod.rs
crates/cloud-sdk-azure-client/src/services/: compute.rs  identity.rs  mod.rs  networking.rs  resource_manager.rs  storage.rs
crates/cloud-sdk-azure-mock/: Cargo.toml
crates/cloud-sdk-azure-mock/src/: config.rs  lib.rs  server.rs
crates/cloud-sdk-azure-mock/src/middleware/: api_version.rs  auth.rs  delay.rs  mod.rs  request_id.rs
crates/cloud-sdk-azure-mock/src/routes/: blobs.rs  compute.rs  identity.rs  mod.rs  networking.rs  oauth.rs  resource_groups.rs  storage_accounts.rs  subscriptions.rs
crates/cloud-sdk-azure-mock/src/state/: mod.rs  store.rs
crates/cloud-sdk-azure-mock/tests/: server_tests.rs  storage_operations_test.rs  storage_tests.rs  vm_fidelity_test.rs  vm_operations_test.rs
crates/cloud-sdk-cli/: Cargo.toml
crates/cloud-sdk-cli/src/: main.rs
crates/cloud-sdk-core/: Cargo.toml
crates/cloud-sdk-core/src/: auth.rs  error.rs  lib.rs  provider.rs
crates/cloud-sdk-core/src/models/: mod.rs  pagination.rs  resource.rs
crates/cloud-sdk-core/src/services/: compute.rs  identity.rs  mod.rs  networking.rs  resource_manager.rs  storage.rs
crates/cloud-sdk-core/src/services/compute/: common.rs  diagnostics.rs  identity.rs  instance_view.rs  mod.rs  models.rs  network.rs  os.rs  scheduling.rs  security.rs  service.rs  storage.rs
crates/cloud-sdk-core/src/services/networking/: asg.rs  common.rs  mod.rs  nic.rs  nsg.rs  peering.rs  public_ip.rs  route_table.rs  service.rs  service_tags.rs  subnet.rs  vnet.rs
crates/cloud-sdk-core/src/services/storage/: blobs.rs  encryption.rs  endpoints.rs  identity.rs  keys.rs  mod.rs  models.rs  network.rs  properties.rs  service.rs
crates/cloud-sdk-test/: Cargo.toml
crates/cloud-sdk-test/src/: harness.rs
crates/cloud-sdk-test/tests/: auth_roundtrip.rs  compute_extended_roundtrip.rs  compute_roundtrip.rs  identity_roundtrip.rs  networking_extended_roundtrip.rs  networking_p2_roundtrip.rs  networking_p3_roundtrip.rs  networking_roundtrip.rs  resource_manager_roundtrip.rs  storage_extended_roundtrip.rs  storage_roundtrip.rs
crates/cloud-sdk/src/: lib.rs
