[package]
name = "cloud-sdk-azure-mock"
description = "Mock Azure REST API server for local development"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-sdk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
http = "1"

[dev-dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
