[package]
name = "cloud-sdk-cli"
description = "Standalone mock Azure REST API server binary"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-sdk-azure-mock = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
